--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta 
+      name="viewport"
+      content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
+      content="Prefactibilidad y monitoreo bloques de tierra de la Agencia Nacional de Hidrocarburos · ANH">
+    <meta
+      name="author"
+      content="PEM · Instituto Humboldt">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <title>Mi Bloque · ANH</title>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet">
+    <link href="css/main.css" type="text/css" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +32,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
