--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta
       name="author"
       content="PEM · Instituto Humboldt">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Mi Bloque · ANH</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet">
     <link href="css/main.css" type="text/css" rel="stylesheet">
