--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <title>Mi Bloque · ANH</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet">
-    <link href="css/main.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
