--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="author"
       content="PEM · Instituto Humboldt">
     <link rel="icon" type="image/png" href="favicon.png">
-    <title>Mi Bloque · ANH</title>
+    <title>Mi Área · ANH</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
 
